--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>I am static website yon know me</title>
   </head>
   <body>
-    <h1>I am static website</h1>
-    <h4>Change 2 was made </h4>
+    <h1>I am Batman</h1>
+    <h4>Change 3 was made </h4>
   </body>
 </html>
